--- a/index.html
+++ b/index.html
@@ -3,26 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;900&family=Swanky+and+Moo+Moo&family=VT323&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/gobal.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="box1 js-box"><span class="xOrO1"></span></div>
-      <div class="box2 js-box"><span class="xOrO2"></span></div>
-      <div class="box3 js-box"><span class="xOrO3"></span></div>
-      <div class="box4 js-box"><span class="xOrO4"></span></div>
-      <div class="box5 js-box"><span class="xOrO5"></span></div>
-      <div class="box6 js-box"><span class="xOrO6"></span></div>
-      <div class="box7 js-box"><span class="xOrO7"></span></div>
-      <div class="box8 js-box"><span class="xOrO8"></span></div>
-      <div class="box9 js-box"><span class="xOrO9"></span></div>
+    <h1 class="title">Tic Tac Toe</h1>
+    <div class="board">
+      <div class="box cell1" style="border-top-left-radius: 30px"></div>
+      <div class="box cell2"></div>
+      <div class="box cell3" style="border-top-right-radius: 30px"></div>
+      <div class="box cell4"></div>
+      <div class="box cell5"></div>
+      <div class="box cell6"></div>
+      <div class="box cell7" style="border-bottom-left-radius: 30px"></div>
+      <div class="box cell8"></div>
+      <div class="box cell9" style="border-bottom-right-radius: 30px"></div>
     </div>
     <script src="scripts/index.js"></script>
   </body>
