win menu and bug fixes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <div class="box cell8"></div>
       <div class="box cell9" style="border-bottom-right-radius: 30px"></div>
     </div>
-    <script src="scripts/index.js"></script>
+    <div class="overlay"></div>
+    <div class="winner">
+      <p class="winner-text">X Won!</p>
+      <div class="buttons">
+        <button class="restart">Restart</button>
+        <button class="quit">Close</button>
+      </div>
+    </div>
+    <script src="scripts/index.js" type="module"></script>
   </body>
 </html>
