--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/gobal.css" />
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
   </head>
   <body>
-    <h1 class="title">Tic Tac Toe</h1>
+    <header>
+      <h1 class="title">Tic Tac Toe</h1>
+    </header>
     <div class="board">
       <div class="box cell1" style="border-top-left-radius: 30px"></div>
       <div class="box cell2"></div>
