--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
     </div>
     <div class="warning" id="warning">
       <h5>Warning:</h5>
-      <p>
-        Hey Pookie woo the menu in top left is in development so nothing works
-        in it plpease no touchy wouchy yet
-      </p>
+      <p>The menu is in development so it doesn't work just yet.</p>
       <button class="close">Close</button>
     </div>
     <script src="scripts/general.js"></script>
