facebook and twitter meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Play Tic Tac Toe! (This is just a small project for self-learning)"
+    />
+    <meta name="author" content="Mika" />
+    <meta property="og:title" content="Tic Tac Toe" />
+    <meta property="og:url" content="https://makerm1.github.io/tic-tac-toe/" />
+    <meta property="og:site_name" content="Tic Tac Toe" />
+    <meta
+      property="og:description"
+      content="Play Tic Tac Toe! (This is just a small project for self-learning)"
+    />
+    <meta property="og:image" content="images/tic-tac-toe-icon.svg" />
+    <meta property="twitter:image" content="images/logo.png" />
     <link rel="stylesheet" href="css/gobal.css" />
     <link rel="icon" href="images/tic-tac-toe-icon.svg" />
     <title>Tic Tac Toe</title>
