--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
             </div>
             <p>Theme</p>
           </div>
-          <div class="option" title="VS. Bot">
-            <i class="fa-solid fa-robot fa-lg"></i>
-            <p>VS. Bot</p>
-          </div>
+          <a href="pages/vs-bot.html">
+            <div class="option" title="VS. Bot">
+              <i class="fa-solid fa-robot fa-lg"></i>
+              <p>VS. Bot</p>
+            </div>
+          </a>
           <div class="option" title="About">
             <i class="fa-solid fa-circle-info fa-lg"></i>
             <p>About</p>
@@ -78,7 +80,11 @@
     <div class="warning-overlay" id="warning-overlay"></div>
     <div class="warning" id="warning">
       <h5>Warning:</h5>
-      <p>The menu is in development so it doesn't work just yet.</p>
+      <p>
+        The menu is in development so some stuff don't work just yet. <br />
+        <br />
+        (VS. Bot Test)
+      </p>
       <button class="close">Close</button>
     </div>
     <script src="scripts/index.js" type="module"></script>
