--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
               <p>VS. Bot</p>
             </div>
           </a>
-          <div class="option" title="About">
-            <i class="fa-solid fa-circle-info fa-lg"></i>
-            <p>About</p>
-          </div>
+           <a href="pages/info.html">   
+            <div class="option" title="About">
+              <i class="fa-solid fa-circle-info fa-lg"></i>
+              <p>About</p>
+            </div>
+            </a>
         </div>
       </div>
       <h1 class="title">Tic Tac Toe</h1>
